--- a/registration.html
+++ b/registration.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<<<<<<< HEAD
+
 
 <head>
   <meta charset="utf-8">
@@ -13,26 +13,23 @@
   <link rel="stylesheet" href="css/login.css">
   <title></title>
 </head>
+<meta charset="utf-8">
 
-=======
-  <head>
-    <meta charset="utf-8">
-    
-    <script src="https://kit.fontawesome.com/7cf8b731c0.js" crossorigin="anonymous"></script>    
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-     <link rel="preconnect" href="https://fonts.gstatic.com">
-     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="/login.css">
-    <title></title>
-  </head>
->>>>>>> 6e68035d63886d26048b288b77205a9807e1d966
+<script src="https://kit.fontawesome.com/7cf8b731c0.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+  integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="/login.css">
+<title></title>
+</head>
+
 <body>
   <div class="header" id="topheader">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container text-uppercase p-2">
         <a class="navbar-brand" href="index.html"><i class="fa-solid fa-eye"></i> HAWK EYE</a>
-<<<<<<< HEAD
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -86,36 +83,36 @@
   </section>
 
 </html>
-=======
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-       aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Gallery</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+</button>
+
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <ul class="navbar-nav ml-auto">
+    <li class="nav-item">
+      <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Gallery</a>
+    </li>
+  </ul>
+</div>
+</div>
+</nav>
 </div>
 <section class="row form my-4 mx-5">
-  
+
 
   <div class="col-lg-12 ">
     <h1 class="font-weight-bold py-3">Registration Form</h1>
     <form class="" action="index.html" method="post">
-    <div class ="form-row">
+      <div class="form-row">
         <div class="col-lg-4 col-4">
-        <input type="text" placeholder="Name" name="" value="" class="form-control" my-3 p-3>
-    </div>
-    </div>
+          <input type="text" placeholder="Name" name="" value="" class="form-control" my-3 p-3>
+        </div>
+      </div>
       <div class="form-row">
         <div class="col-lg-4 col-4">
           <input type="text" placeholder="Username" name="" value="" class="form-control" my-3 p-3>
@@ -132,10 +129,11 @@
         </div>
       </div>
       <div style="text-align: center;">
-        Already have an account.<br><a href="ManagerLogin.html">Manager Login</a><br><a href="SecurityLogin.html">Security Login</a>
+        Already have an account.<br><a href="ManagerLogin.html">Manager Login</a><br><a
+          href="SecurityLogin.html">Security Login</a>
       </div>
     </form>
   </div>
 </section>
+
 </html>
->>>>>>> 6e68035d63886d26048b288b77205a9807e1d966
